[package]
name = "osm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
geo = "0.23.1"
indicatif = "0.17.2"
milli = { git = "https://github.com/meilisearch/milli/", version = "0.37.0", default-features = false, optional = true }
obkv = { version = "0.2.0", optional = true }
osmpbfreader = "0.15.2"
rayon = "1.6.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tempfile = { version = "3.3.0", optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ureq = "2.5.0"
url = "2.3.1"

[features]
default = ["search"]
search = ["dep:milli", "dep:tempfile", "dep:obkv"]
