[package]
name = "osm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.66", optional = true }
clap = { version = "4.0.29", features = ["derive"], optional = true }
csv = { version = "1.1.6", optional = true }
geo = { version = "0.23.1", optional = true }
indicatif = { version = "0.17.2", optional = true }
osmpbfreader = { version = "0.15.2", optional = true }
rayon = { version = "1.6.0", optional = true }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", features = [
  "env-filter",
], optional = true }
ureq = { version = "2.5.0", optional = true }
url = { version = "2.3.1", optional = true }

[features]
default = ["address", "__bin"]
address = ["dep:osmpbfreader", "dep:csv", "dep:ureq", "dep:url", "dep:rayon", "dep:geo", "dep:anyhow"]
tracing = ["dep:tracing"]

# internal features
__bin = ["tracing", "dep:tracing-subscriber", "dep:indicatif", "dep:clap"]

[[bin]]
name = "address"
required-features = ["address", "__bin"]
