[package]
name = "osm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
csv = { version = "1.1", optional = true }
geo = { version = "0.26", optional = true }
indicatif = { version = "0.17", optional = true }
osmpbfreader = { version = "0.16.0", optional = true }
rayon = { version = "1.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
ureq = { version = "2.5.0", optional = true }
url = { version = "2.3.1", optional = true }

[features]
default = ["address", "__bin"]
address = ["dep:osmpbfreader", "dep:csv", "dep:ureq", "dep:url", "dep:rayon", "dep:geo", "dep:anyhow"]
tracing = ["dep:tracing"]

# internal features
__bin = ["tracing", "dep:tracing-subscriber", "dep:indicatif", "dep:clap"]

[[bin]]
name = "address"
required-features = ["address", "__bin"]
