[package]
name = "fuzzy-geo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
csv = { workspace = true }
geo = { workspace = true }
milli = { git = "https://github.com/meilisearch/milli/", version = "0.37.0", default-features = false}
osmpbfreader = { workspace = true }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tempfile = "3.3.0"
